--- a/frontend/src/app/components/user.component.html
+++ b/frontend/src/app/components/user.component.html
@@ -1,4 +1,4 @@
-<h1>Hello {{name}}</h1>
+<!--<h1>Hello {{name}}</h1>
 <p>Email : {{email}}</p>
 <p>{{address.street}}</p>
 <p>{{address.city}}</p>
@@ -26,4 +26,32 @@
 <div *ngFor="let post of posts">
     <h3>{{post.title}}</h3>
     <p>{{post.body}}</p>
-</div>
+</div>-->
+
+<nav class="navbar navbar-fixed-top navbar-default" style="background: white none repeat scroll 0% 0%;">
+    <div class="container-fluid">
+        <a class="navbar-brand active mr-auto" href="#" routerLink="/">Musyqa</a>
+    <div>
+        <ul class="nav navbar-nav navbar-right nav-buttons">
+            <li><a class="btn" routerLink="/signup">Get Started</a></li>
+            <li><a class="btn" routerLink="/login">Login</a></li>
+        </ul>
+    </div>
+    </div>
+</nav>
+
+
+<section id="static-header">
+    <div class="header-text container">
+    <div class="wrap">
+    <h2>Enjoy Music Sessions Created to Learn Easily!!</h2>
+    <h5>Start your training with 1000+ music pieces today.</h5>
+    <a href="/signup" class="btn btn-primary" data-track="header_cta">Get Started Now
+    <i class="icon-arrow-right icon-position-right icon-white"></i>
+    </a>
+    </div>
+    </div>
+
+    
+</section>
+
