--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -17,6 +17,7 @@ body {
   font-size: 15px;
   line-height: 24px;
   color: rgb(240, 235, 235);
+  height : 100%;
 }
 #static-header .header-text {
   width: 100%;
@@ -28,6 +29,27 @@ body {
   position: absolute;
   color: rgb(243, 237, 237);
 }
+.signup {
+  width: 100%;
+  height: 100%;
+  background: url(images/reg.jpg) no-repeat;
+  background-size: cover;
+  position: fixed;
+  color: rgb(0, 0, 0);
+}
+.login {
+    width: 100%;
+    height: 100%;
+    background: url(images/reg.jpg) no-repeat;
+    background-size: cover;
+    position: absolute;
+    color: rgb(0, 0, 0);
+}
+/*
+.login-form {
+  top : 50%;
+  left: 50%;
+}*/
 #static-header .down-arrow img {
   z-index: 1;
   width: 15px;
@@ -47,10 +69,4 @@ img {
   vertical-align: middle;
   border: 0;
   -ms-interpolation-mode: bicubic;
-}
-#training-steps {
-  padding: 40px 20px 40px 20px;
-  background-color: #0e91a1;
-  color: #fff;
-  text-align: center;
 }
