about page ready

--- a/frontend/src/app/components/html/logout.component.html
+++ b/frontend/src/app/components/html/logout.component.html
@@ -1,3 +1,14 @@
+<nav class="navbar navbar-fixed-top navbar-default" style="background: white none repeat scroll 0% 0%;">
+        <div class="container-fluid">
+            <a class="navbar-brand active mr-auto" href="#" routerLink="/">Musyqa</a>
+        <div>
+            <ul class="nav navbar-nav navbar-right nav-buttons">
+                <li><a class="btn" routerLink="/signup">Get Started</a></li>
+                <li><a class="btn" routerLink="/login">Login</a></li>
+                <li><a class="btn" routerLink="/about">About</a></li>
+            </ul>
+        </div>
+        </div>
+    </nav>
 <h1>You have successfully loged out</h1>
-<h3>Click here to login again</h3>
-<button (click) = "signin()" >login</button>
+<h3>PLEASE LOGIN TO CONTINUE OR CLOSE THE WINDOW</h3>
