--- a/frontend/src/app/components/html/signup.component.html
+++ b/frontend/src/app/components/html/signup.component.html
@@ -1,5 +1,16 @@
 
 <div class="container-fluid signup" style="">
+        <nav class="navbar navbar-fixed-top navbar-default" style="background: white none repeat scroll 0% 0%;">
+                <div class="container-fluid">
+                    <a class="navbar-brand active mr-auto" href="#" routerLink="/">Musyqa</a>
+                <div>
+                    <ul class="nav navbar-nav navbar-right nav-buttons">
+                        <li><a class="btn" routerLink="/login">Login</a></li>
+                        <li><a class="btn" routerLink="/about">About</a></li>
+                    </ul>
+                </div>
+                </div>
+            </nav>
 <div class="col-md-6 col-md-offset-3">
     <h1>REGISTRATION</h1>
     <hr/>
