--- a/frontend/src/app/components/html/home.component.html
+++ b/frontend/src/app/components/html/home.component.html
@@ -35,6 +35,7 @@
         <ul class="nav navbar-nav navbar-right nav-buttons">
             <li><a class="btn" routerLink="/signup">Get Started</a></li>
             <li><a class="btn" routerLink="/login">Login</a></li>
+            <li><a class="btn" routerLink="/about">About</a></li>
         </ul>
     </div>
     </div>
