--- a/frontend/src/app/components/html/login.component.html
+++ b/frontend/src/app/components/html/login.component.html
@@ -1,4 +1,15 @@
 <div class="container-fluid login">
+        <nav class="navbar navbar-fixed-top navbar-default" style="background: white none repeat scroll 0% 0%;">
+                <div class="container-fluid">
+                    <a class="navbar-brand active mr-auto" href="#" routerLink="/">Musyqa</a>
+                <div>
+                    <ul class="nav navbar-nav navbar-right nav-buttons">
+                        <li><a class="btn" routerLink="/signup">Get Started</a></li>
+                        <li><a class="btn" routerLink="/about">About</a></li>
+                    </ul>
+                </div>
+                </div>
+            </nav>
 <div class="col-md-6 col-md-offset-3" style="top:30%">
     <h2>Login</h2>
     <form name="form" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
