--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -32,7 +32,7 @@ body {
 .signup {
   width: 100%;
   height: 100%;
-  background: url(images/reg.jpg) no-repeat;
+  background: url(images/lt.jpg) no-repeat;
   background-size: cover;
   position: fixed;
   color: rgb(0, 0, 0);
@@ -40,10 +40,25 @@ body {
 .login {
     width: 100%;
     height: 100%;
-    background: url(images/reg.jpg) no-repeat;
+    background: url(images/lt.jpg) no-repeat;
     background-size: cover;
     position: absolute;
     color: rgb(0, 0, 0);
+}
+.sections {
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  text-align: center;
+  background-image: url(images/maxresdefault.jpg);
+}
+.jumbotron-billboard {
+  margin-bottom: 0px;
+  opacity: 0.8;
+  color: #fff;
+  width: 100%;
+  height: 100%;
+  top:0;
+  left:0;
+  z-index:1;
 }
 /*
 .login-form {
