welcome screen ready fr user

--- a/frontend/src/app/components/html/logout.component.html
+++ b/frontend/src/app/components/html/logout.component.html
@@ -1,3 +1,4 @@
+
 <nav class="navbar navbar-fixed-top navbar-default" style="background: white none repeat scroll 0% 0%;">
         <div class="container-fluid">
             <a class="navbar-brand active mr-auto" href="#" routerLink="/">Musyqa</a>
@@ -10,5 +11,9 @@
         </div>
         </div>
     </nav>
+<div class ="logout-page">
+<div class="container jumbotron jumbotron-logout">
 <h1>You have successfully loged out</h1>
 <h3>PLEASE LOGIN TO CONTINUE OR CLOSE THE WINDOW</h3>
+</div>
+</div>
