--- a/frontend/src/app/components/html/profile.component.html
+++ b/frontend/src/app/components/html/profile.component.html
@@ -1,11 +1,34 @@
 <div *ngIf="loggedin">
-        <h1>
-            Hello you are logged in </h1>
-            <p>click here to log out</p>
-            <button (click) = "logout()" >logout</button>
+    <nav class="navbar navbar-fixed-top navbar-default" style="background: white none repeat scroll 0% 0%;">
+        <div class="container-fluid">
+            <a class="navbar-brand active mr-auto" href="#" routerLink="/">Musyqa</a>
+        <div>
+            <ul class="nav navbar-nav navbar-right nav-buttons">
+                <li><a class="btn" routerLink="/logout">Logout</a></li>
+                <li><a class="btn" routerLink="/about">About</a></li>
+            </ul>
+        </div>
+        </div>
+    </nav>
+    <div class="welcome-user">
+        <section id="welcome">
+        <div class="container container-welcome">
+            <h2>Welcome to Musyqa!</h2>
+            <h1>Maestro {{name}}</h1>       
+        </div>    
+        </section>
+    </div>
 </div>
 <div *ngIf="loggedout">
-    <h1>Please login dude</h1>
-    <p>click here to login</p>
-    <button (click) = "login()" >login</button>
+    <nav class="navbar navbar-fixed-top navbar-default" style="background: white none repeat scroll 0% 0%;">
+        <div class="container-fluid">
+            <a class="navbar-brand active mr-auto" href="#" routerLink="/">Musyqa</a>
+        <div>
+            <ul class="nav navbar-nav navbar-right nav-buttons">
+                <li><a class="btn" routerLink="/login">Login</a></li>
+                <li><a class="btn" routerLink="/about">About</a></li>
+            </ul>
+        </div>
+        </div>
+    </nav>
 </div>
