--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -19,6 +19,15 @@ body {
   color: rgb(240, 235, 235);
   height : 100%;
 }
+#welcome {
+  z-index: 1;
+  position: absolute;
+  top: 50%;
+  left: 30%;
+  -webkit-transform: translate(-50%,-50%);
+  max-width: 620px;
+  width: 85%;
+}
 #static-header .header-text {
   width: 100%;
   height: 100%;
@@ -59,6 +68,41 @@ body {
   top:0;
   left:0;
   z-index:1;
+}
+.container-welcome {
+  margin-bottom: 0px;
+  color: rgb(0, 0, 0);
+  width: 100%;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  height: 100%;
+  text-align: center;
+  z-index:1;
+}
+
+.jumbotron-logout {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  opacity: 0.8;
+  color: #fff;
+  text-align: center;
+  position: fixed;
+  top:28%;
+  left:5%;
+}
+.welcome-user {
+  width: 100%;
+  height: 100%;
+  background: url(images/profile.jpg) no-repeat;
+  background-size: cover;
+  position: fixed;
+  color: rgb(0, 0, 0);
+}
+.logout-page{
+  width: 100%;
+  height: 100%;
+  background: url(images/logout.jpg) no-repeat;
+  background-size: cover;
+  position: fixed;
+  color: rgb(0, 0, 0);
 }
 /*
 .login-form {
