--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -28,6 +28,16 @@ body {
   max-width: 620px;
   width: 85%;
 }
+#grades {
+  z-index: 1;
+  position: absolute;
+  top: 50%;
+  left: 30%;
+  -webkit-transform: translate(-50%,-50%);
+  max-width: 620px;
+  margin-top: 40px;
+  width: 85%;
+}
 #static-header .header-text {
   width: 100%;
   height: 100%;
@@ -71,6 +81,15 @@ body {
 }
 .container-welcome {
   margin-bottom: 0px;
+  color: rgb(0, 0, 0);
+  width: 100%;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  height: 100%;
+  text-align: center;
+  z-index:1;
+}
+.grade-list{
+  margin-top: 20%;
   color: rgb(0, 0, 0);
   width: 100%;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
