--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -79,6 +79,17 @@ body {
   left:0;
   z-index:1;
 }
+
+.container-grades {
+  margin-bottom: 0px;
+  opacity: 0.7;
+  color: rgb(0, 0, 0);
+  width: 100%;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  height: 100%;
+  text-align: center;
+  z-index:1;
+}
 .container-welcome {
   margin-bottom: 0px;
   color: rgb(0, 0, 0);
@@ -89,13 +100,12 @@ body {
   z-index:1;
 }
 .grade-list{
-  margin-top: 20%;
-  color: rgb(0, 0, 0);
   width: 100%;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
   height: 100%;
-  text-align: center;
-  z-index:1;
+  background: url(images/grade.jpg) no-repeat;
+  background-size: cover;
+  position: fixed;
+  color: rgb(0, 0, 0);
 }
 
 .jumbotron-logout {
