--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -28,7 +28,44 @@ body {
   max-width: 620px;
   width: 85%;
 }
+#staff {
+  z-index: 1;
+  position: absolute;
+  top: 50%;
+  left: 30%;
+  -webkit-transform: translate(-50%,-50%);
+  max-width: 620px;
+  width: 85%;
+}
+#clef {
+  z-index: 1;
+  position: absolute;
+  top: 50%;
+  left: 30%;
+  -webkit-transform: translate(-50%,-50%);
+  max-width: 620px;
+  width: 85%;
+}
+#ledger-lines {
+  z-index: 1;
+  position: absolute;
+  top: 50%;
+  left: 30%;
+  -webkit-transform: translate(-50%,-50%);
+  max-width: 620px;
+  width: 85%;
+}
 #grades {
+  z-index: 1;
+  position: absolute;
+  top: 50%;
+  left: 30%;
+  -webkit-transform: translate(-50%,-50%);
+  max-width: 620px;
+  margin-top: 40px;
+  width: 85%;
+}
+#courses {
   z-index: 1;
   position: absolute;
   top: 50%;
@@ -79,6 +116,15 @@ body {
   left:0;
   z-index:1;
 }
+.container-welcome {
+  margin-bottom: 0px;
+  color: rgb(0, 0, 0);
+  width: 100%;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  height: 100%;
+  text-align: center;
+  z-index:1;
+}
 
 .container-grades {
   margin-bottom: 0px;
@@ -90,7 +136,7 @@ body {
   text-align: center;
   z-index:1;
 }
-.container-welcome {
+.container-course {
   margin-bottom: 0px;
   color: rgb(0, 0, 0);
   width: 100%;
@@ -99,7 +145,7 @@ body {
   text-align: center;
   z-index:1;
 }
-.grade-list{
+.grade-list {
   width: 100%;
   height: 100%;
   background: url(images/grade.jpg) no-repeat;
@@ -107,7 +153,25 @@ body {
   position: fixed;
   color: rgb(0, 0, 0);
 }
+.course-container{
+  width: 100%;
+  height: 100%;
+  background: url(images/grade.jpg) no-repeat;
+  background-size: cover;
+  position: relative;
+  text-align: center;
+  z-index: 1;
+  color: rgb(0, 0, 0);
+}
 
+.course-list{
+  width: 100%;
+  height: 100%;
+  background: url(images/grade.jpg) no-repeat;
+  background-size: cover;
+  position: fixed;
+  color: rgb(0, 0, 0);
+}
 .jumbotron-logout {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   opacity: 0.8;
