basic theory done, music details to be added in db

--- a/frontend/src/app/components/courses/html/scl.component.html
+++ b/frontend/src/app/components/courses/html/scl.component.html
@@ -12,7 +12,7 @@
         </div>
     </nav>
     <div class="course-container">
-        <div class="container row">
+        <div class="container">
            <hr/>
            <hr/> 
                 <h1>STAFF</h1>
@@ -27,7 +27,7 @@
                         
                         A time signature to the right of the clef indicates the relationship between timing counts and note symbols, while bar lines group notes on the staff into measures.</p>
         </div>
-        <div class="container row">
+        <div class="container">
                 <hr/>
                 <hr/>
                 <h1>CLEF</h1>
@@ -42,7 +42,7 @@
                         The use of three different clefs makes it possible to write music for all instruments and voices, even though they may have very different tessituras (that is, even though some sound much higher or lower than others). This would be difficult to do with only one clef, since the modern stave has only five lines, and the number of pitches that can be represented on the stave, even with ledger lines, is not nearly equal to the number of notes the orchestra can produce. The use of different clefs for various instruments and voices allows each part to be written comfortably on the stave with a minimum of ledger lines. To this end, the G-clef is used for high parts, the C-clef for middle parts, and the F-clef for low parts—with the notable exception of transposing parts, which are written at a pitch different from their sound, often even in a different octave
                 </p>   
         </div>
-        <div class="container row">
+        <div class="container">
             <hr/>
             <hr/>
             <h1>Ledger Lines</h1>
