chaining and adding data left

--- a/frontend/src/app/components/html/signup.component.html
+++ b/frontend/src/app/components/html/signup.component.html
@@ -25,12 +25,12 @@
 
         <div class="form-group" [ngClass]="{ 'has-error': form.submitted && !email.valid }">
             <label for="email">Email ID</label>
-            <input type="text" class="form-control" name="email" [(ngModel)]="model.email" #email="ngModel" required />
-            <div *ngIf="form.submitted && !email.valid" class="help-block">Email is required</div>
+            <input type="text" class="form-control" name="email" pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[A-Za-z]{2,}$" required [(ngModel)]="model.email" #email="ngModel"/>
+            <div *ngIf="form.submitted && !email.valid" class="help-block">Email is not valid</div>
         </div>
         <div class="form-group" [ngClass]="{ 'has-error': form.submitted && !phone.valid }">
             <label for="phone">Phone Number</label>
-            <input type="text" class="form-control" name="phone" [(ngModel)]="model.phone" #phone="ngModel" required />
+            <input type="text" class="form-control" name="phone" pattern="[0-9]{10}" [(ngModel)]="model.phone" #phone="ngModel" required />
             <div *ngIf="form.submitted && !phone.valid" class="help-block">Phone number is required</div>
         </div>
         <div class="form-group" [ngClass]="{ 'has-error': form.submitted && !password.valid }">
