--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -125,6 +125,15 @@ body {
   text-align: center;
   z-index:1;
 }
+.music-container {
+  margin-bottom: 0px;
+  color: rgb(0, 0, 0);
+  width: 100%;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  height: 100%;
+  text-align: center;
+  z-index:1;
+}
 
 .container-grades {
   margin-bottom: 0px;
@@ -187,6 +196,13 @@ body {
   background: url(images/profile.jpg) no-repeat;
   background-size: cover;
   position: fixed;
+  color: rgb(0, 0, 0);
+}
+.highlight {
+  width: 100%;
+  height: 100%;
+  background: url(images/grade.jpg) no-repeat;
+  background-size: cover;
   color: rgb(0, 0, 0);
 }
 .logout-page{
