certificate and more info into database

--- a/frontend/src/app/components/html/music.component.html
+++ b/frontend/src/app/components/html/music.component.html
@@ -31,6 +31,6 @@
       </div>
      <hr/>
      <hr/>
-     <button type="button" class="btn btn-primary" (click)="update()">Next</button>   
+     <button type="button" class="btn btn-primary" (click)="update()">Done</button>   
     </div>  
   </header>
