--- a/frontend/src/app/components/html/list.component.html
+++ b/frontend/src/app/components/html/list.component.html
@@ -21,7 +21,7 @@
                             </a>
                             </div>
                             <div *ngIf="!check(number)">
-                                    <a routerLink="/music/{{currentPageGrade}}/{{number}}" class="list-group-item list-group-item-action disabled">
+                                    <a routerLink="/music/{{currentPageGrade}}/{{number}}" class="inactiveLink list-group-item list-group-item-action disabled">
                                       Music {{number}}
                             </a>
                             </div>
