--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -75,6 +75,10 @@ body {
   margin-top: 40px;
   width: 85%;
 }
+.inactiveLink {
+  pointer-events: none;
+  cursor: default;
+}
 #static-header .header-text {
   width: 100%;
   height: 100%;
@@ -160,6 +164,14 @@ body {
   background: url(images/grade.jpg) no-repeat;
   background-size: cover;
   position: fixed;
+  color: rgb(0, 0, 0);
+}
+.music-page {
+  width: 100%;
+  height: 100%;
+  background: url(images/grade.jpg) no-repeat;
+  background-size: cover;
+  position: relative;
   color: rgb(0, 0, 0);
 }
 .course-container{
